--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -515,7 +515,7 @@ particular events_list, so i'll specialized the class here
 /****************************************/
 /*Status = to fill*/
 
-.events_nav{}
+.av{}
 .events_nav ul{}
 .events_nav li{}
 .events_nav a{
@@ -1805,15 +1805,15 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 }
 
 #globalnav li a, #lognav li a{
-        font-size:1.2em;
-        display:block;
-        padding:0 10px;
-        padding-top:5px;
-        color:#c0c0c0;
+    font-size:1.2em;
+    display:block;
+    padding:0 10px;
+    padding-top:5px;
+    color:#FFFFFF;
 }
 
 #globalnav li a:hover, #lognav li a:hover{
-    color:#fff;
+    color:#CCC;
     text-decoration:none; 
 }
 
@@ -1822,7 +1822,7 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 #login{}
 
 #bottomheader{
-        position:absolute;
+    position:absolute;
     display:inline-block;    
     left:50%;
     top:50px;
@@ -1866,11 +1866,8 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     
 }
 
-
-
 .twitter{
     background-image: url("../img/layout/social/normal/twitter.png");
-
 
 }
 .facebook{
@@ -1928,7 +1925,7 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 }
 
 #subnav li:hover{
-    background-color: rgba(225, 0, 0, 0.5);
+    background-color:#EE4444;;
 }
 
 #subnav a:hover{
