--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1314,23 +1314,79 @@ on laisse comme ça ce n'est pas si grave*/
 /****************************************/
 /*Status = to fill*/
 
-.gestion_events_motivation{}
+.gestion_events_motivation{
+    margin-top:30px;
+}
+.gestion_events_motivation section h1{
+    font-size:2em;
+}
+.gestion_events_motivation section h2{
+    font-size:1em;
+    margin-bottom:-5px;
+}
 
-.gestion_events_motivation article{
+.gestion_events_motivation p{
+    margin-left:0px;
+    line-height:18px;
+    margin-bottom:15px;
+    line-height:15px;
+}
+
+.gestion_events_motivation section{
+    margin:10px;
     background-color:#eeeeee;
-    margin:10px 0;
 }
-.gestion_events_motivation article h1{}
-.gestion_events_motivation article p{}
-.gestion_events_motivation article section{
+.gestion_events_motivation section ul{
     margin:10px 0;
+    list-style-type: none;
+    margin-right:40px;
 }
-.gestion_events_motivation article section ul{
-    margin:10px 0;
+.gestion_events_motivation section ul li{
+    float:right;
 }
-.gestion_events_motivation article section ul li{}
-.gestion_events_motivation article section ul li a{}
 
+.gestion_events_motivation section ul .accept{
+    background-image: url("../img/layout/registrationStatus/accept.svg");
+    cursor:pointer;
+    width:32px;
+    height:34px;
+}
+
+.gestion_events_motivation section ul .accept:hover{
+    background-image: url("../img/layout/registrationStatus/acceptHover.svg");
+    cursor:pointer;
+    width:32px;
+    height:34px;
+}
+
+.gestion_events_motivation section ul .wait{
+    background-image: url("../img/layout/registrationStatus/wait.svg");
+    cursor:pointer;
+    width:32px;
+    height:32px;
+}
+
+.gestion_events_motivation section ul .wait:hover{
+    background-image: url("../img/layout/registrationStatus/waitHover.svg");
+    cursor:pointer;
+    width:32px;
+    height:32px;
+}
+
+.gestion_events_motivation section ul .refuse{
+    background-image: url("../img/layout/registrationStatus/refuse.svg");
+    cursor:pointer;
+    width:34px;
+    height:34px;
+}
+
+.gestion_events_motivation section ul .refuse:hover{
+    background-image: url("../img/layout/registrationStatus/refuseHover.svg");
+    cursor:pointer;
+    width:34px;
+    height:34px;
+}
+    
 /*end of gestion_events_motivation*/
 
 
@@ -1364,7 +1420,7 @@ on laisse comme ça ce n'est pas si grave*/
     display:inline-block;
     width:100%;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 10px
     padding: 0;
     line-height: 20px;
 }
