--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -102,8 +102,8 @@ legend, label{
     display: block;
     display: inline-block;
     float: left;
-    margin:0;
-    margin-bottom: 10px;
+    /*margin:0;
+    margin-bottom: 10px;*/
     padding:0;
     line-height: 30px;
     font-size: 1.5em;
@@ -658,12 +658,17 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
     height:140px;
 }
 
-.events_registration section form fieldset p input{
-    width:65%;
+.events_registration section form fieldset p{
+    margin-bottom:10px;
 }
-
 .events_registration section form fieldset p label{
     width:30%;
+    display:block;
+}
+
+.events_registration section form fieldset p input{
+    width:65%;
+    display:block;
 }
 
 /*end of event_registration*/
