--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -446,6 +446,7 @@ and (min-width : 1224px) {
     position:relative;
 }
 
+
 .contact p {
     margin-bottom:10px;
 }
@@ -465,7 +466,6 @@ and (min-width : 1224px) {
 .contact p textarea{
     margin-top:15px;
     resize:none;
-    height:300px;
 }
 
 .contact iframe{
@@ -532,44 +532,35 @@ particular events_list, so i'll specialized the class here
 /****************************************/
 /*Status = to fill*/
 
+
 .av{}
 .events_nav ul{}
 .events_nav li{}
-.events_nav a{
+.events_nav a{}
+
+.events_nav{
+    display:block;
+    position:fixed;
     bottom:50px;
-    
+    width:100%;
 }
+
+.events_nav a{}
 
 .events_nav span{
     display:none;
 }
 
+
+
+
+
 .events_nav .next{
     background-image:url("../img/layout/arrows/arrowRight.png");
     background-repeat:no-repeat;
     background-position:right; 
-    position:fixed;
-    bottom:50px;
-    right:50px;
-    height:110px;
-}
-
-.events_nav .next h1{
-    top:10px;
-    font-size:2em;
     display:block;
-    position:relative;
     float:right;
-    right: 100px;
-}
-.events_nav .next time{
-   font-size:1.4em;
-    display:block;
-    float:left;
-    position:relative;
-    left:200px;
-    top:60px;
-    
 }
 
 .events_nav .next:hover{
@@ -578,31 +569,28 @@ particular events_list, so i'll specialized the class here
   background-position:right;  
 }
 
+.events_nav .next h1{
+    display:block;
+    float:right;
+}
+
+.events_nav .next time{
+    display:block;
+    float:right;
+}
+
+
+
+
+
+
+
 .events_nav .previous{
     background-image:url("../img/layout/arrows/arrowLeft.png");
     background-repeat:no-repeat;
     background-position:left;
-    position:fixed;
-    bottom:50px;
-    left:50px;
-    height:110px;
-}
-
-.events_nav .previous h1{
-    top:10px;
-    font-size:2em;
-    display:block;
-    position:relative;
-    float:right;
-    left: 100px;
-}
-.events_nav .previous time{
-   font-size:1.4em;
-    display:block;
-    position:relative;
-    float:left;
-    left:100px;
-    
+    float:left;    
+    position: relative;
 }
 
 .events_nav .previous:hover{
@@ -610,6 +598,13 @@ particular events_list, so i'll specialized the class here
   background-repeat:no-repeat;
   background-position:left; 
 }
+.events_nav .previous h1{   
+
+     }
+     
+.events_nav .previous time{ 
+    
+     }
     
 /*end of event_nav*/
 
@@ -623,24 +618,24 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 .events_registration header h1{
     display: block;
     font-size: 2.5em;
-    margin-top: 50px;
+    margin-bottom: 0;
 }
 
 .events_registration header time{
     display: block;
     font-size:1.5em;
     padding-left: 20px;
-    margin-bottom: 25px;
 }
 
 .events_registration header nav a{
-    display:block;
-    float:left;
-    width:100px;
-    height:100px;
+        display:block;
+        float:left;
+        background-image: url("../img/layout/circle.svg");
+        width:100px;
+        height:100px;
 }
 .events_registration header nav a span{
-    display:none;
+        display:none;
 }
 .events_registration .buttonSave{
     margin-bottom:40px;
@@ -650,13 +645,14 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 .events_registration .errorvalue{
     color:red;
     position:relative;
-    top:-10px;
-    left:230px;
+    top:-19px;
+    left:5px;
     clear:both;
 }
 .events_registration .theButton{
     margin: 30px;
 }
+
 
 .events_registration section form fieldset p textarea{
     width:65%;
@@ -848,19 +844,10 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 /****************************************/
 /*Status = aligner les form*/
 
-
 .gestion_contacts_infos .buttonSave{
     display:inline-block;
     width:160px;
     margin-top: -50px;
-}
-
-.gestion_contacts_infos .errorvalue{
-    color:red;
-    position:relative;
-    top:-10px;
-    left:155px;
-    clear:both;
 }
 
 .gestion_contacts_infos form{
@@ -880,7 +867,7 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 .gestion_contacts_infos form p textarea{
     float:right;
     width:70%;
-    height:140px;
+    height:300px;
     margin-top:2px;
 }
 
@@ -990,14 +977,6 @@ enlever ces etapes d'inscription pas nécéssairement utiles, ainsi on s'evite d
 gestion_contacts_infos. Une fois gesiton_contacts_infos fini, cette page devrait
 etre bonne aussi.*/
 
-.gestion_contacts_new .errorvalue{
-    color:red;
-    position:relative;
-    top:-10px;
-    left:160px;
-    clear:both;
-}
-
 .gestion_contacts_new .buttonSave{
     display:inline-block;
     width:160px;
@@ -1025,7 +1004,7 @@ etre bonne aussi.*/
 .gestion_contacts_new form fieldset p textarea{
     float:right;
     width:70%;
-    height:140px;
+    height:300px;
     margin-top:2px;
 }
 
@@ -1086,14 +1065,6 @@ etre bonne aussi.*/
 /*gestion_contacts_role_infos*/
 /****************************************/
 /*Status = to fill*/
-
-.gestion_contacts_role_infos .errorvalue{
-    color:red;
-    position:relative;
-    top:-10px;
-    left:70px;
-    clear:both;
-}
 
 .gestion_contacts_role_infos .buttonRoleInfos{
     display:block;
@@ -1290,14 +1261,6 @@ chaque participants dans la list et un peu styler les status (accepted, pending,
 /*Status = il faut un tout petit peu realigner le boutton mais si
 on laisse comme ça ce n'est pas si grave*/
 
-.gestion_events_mail_edit .errorvalue{
-    color:red;
-    position:relative;
-    top:-10px;
-    left:150px;
-    clear:both;
-}
-
 .gestion_events_mail_edit{}
 
 .gestion_events_mail_edit input{}
@@ -1322,10 +1285,7 @@ on laisse comme ça ce n'est pas si grave*/
     margin-bottom:20px;
 }
 .gestion_events_mail_edit fieldset select option{}
-.gestion_events_mail_edit fieldset textarea{
-    height:280px;
-    
-}
+.gestion_events_mail_edit fieldset textarea{}
 
 
 /*end of gestion_events_mail_edit*/
@@ -1442,8 +1402,8 @@ on laisse comme ça ce n'est pas si grave*/
     display:inline-block;
     width:100%;
     margin: 0;
-    margin-bottom: 10px
-    padding: 0;
+    margin-bottom: 10px;
+    padding:0;
     line-height: 20px;
 }
 
@@ -1477,8 +1437,8 @@ on laisse comme ça ce n'est pas si grave*/
 .gestion_events_role_infos .errorvalue{
     color:red;
     position:relative;
-    top:-10px;
-    left:235px;
+    top:-19px;
+    left:5px;
     clear:both;
 }
 .gestion_events_role_infos form input{
@@ -1669,6 +1629,7 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 /****************************************/
 /*Status = ok*/
 
+
 .gestion_locations_infos .errorvalue{
     color:red;
     position:relative;
@@ -1676,7 +1637,6 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     left:155px;
     clear:both;
 }
-
 .gestion_locations_infos {
     float:right;
 }
@@ -2092,7 +2052,7 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     margin-top:50px;
 }
 .press section p{
-    text-align:justify;
+     text-align:justify;
     margin-bottom:10px;
 }
 
@@ -2127,12 +2087,8 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 
 .register form{}
 .register form p{}
-.register form p label{
-    width:35%;
-}
-.register form p input{
-    width:60%;
-}
+.register form p label{}
+.register form p input{}
 
 /*end of register*/
 
@@ -2149,31 +2105,33 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
 .user_infos .errorvalue{
     color:red;
     position:relative;
-    top:-10px;
-    left:210px;
+    top:-19px;
+    left:5px;
     clear:both;
 }
 
-.user_infos section form legend{
-    margin-bottom:40px;
-    font-size:2em;
-    font-weight:bold;
+.user_infos section{
+   
 }
+.user_infos section form{
+    
 }
-
+.user_infos section form p{
+     
+}
 .user_infos section form p label{
-    font-size:1.2em;
-    width:35%;
-
+    font-size:1em;
+    width:50%;
 }
 .user_infos section form p input{
-    width:60%;
+    float:right;
+    width:70%;
 }
 
 .user_infos .buttonSaveModif{
     display:block;
     background-color:rgba(255,0,0,1);
-    width:160px;
+    width:200px;
     text-align:center;
     vertical-align:middle;
     line-height:30px;
@@ -2182,19 +2140,19 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     font-size:1.3em; 
     border:2px solid #ff0000;
     float:right;
-    margin-bottom:25px;
-}
+    margin-bottom:0px;
+   }
    
 .user_infos .buttonSaveModif:hover{
     color:#ff0000;
     border:2px solid #ff0000;
     background-color:white;
-}
+   }
    
 .user_infos .buttonSavePwd{
     display:block;
     background-color:rgba(255,0,0,1);
-    width:160px;
+    width:220px;
     text-align:center;
     vertical-align:middle;
     line-height:30px;
@@ -2203,19 +2161,18 @@ mettre ça dans du javascript.... si on enleve ces bouttons, pas besoin de js'*/
     font-size:1.3em; 
     border:2px solid #ff0000;
     float:right;
-    margin-bottom:25px;
-}
+   }
    
 .user_infos .buttonSavePwd:hover{
     color:#ff0000;
     border:2px solid #ff0000;
     background-color:white;
-}
+   }
 
-.user_infos section form p textarea{
+.user_infos form p textarea{
     float:right;
-    width:60%;
-    height:250px;
+    width:70%;
+    height:300px;
     margin-top:2px;
 }
 
